RESOLVED FIXED277504
[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-half-leading-block-box-002.html
https://bugs.webkit.org/show_bug.cgi?id=277504
Summary [text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-t...
alan
Reported 2024-08-01 14:25:30 PDT
ssia
Attachments
Patch (3.20 KB, patch)
2024-08-01 14:30 PDT, alan
no flags
Patch (3.20 KB, patch)
2024-08-02 06:59 PDT, alan
no flags
[fast-cq]Patch (3.20 KB, patch)
2024-08-02 07:09 PDT, alan
no flags
alan
Comment 1 2024-08-01 14:30:03 PDT
alan
Comment 2 2024-08-02 06:59:13 PDT
alan
Comment 3 2024-08-02 07:09:04 PDT
Created attachment 472046 [details] [fast-cq]Patch
EWS
Comment 4 2024-08-02 08:49:56 PDT
Committed 281755@main (838a2d42d483): <https://commits.webkit.org/281755@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472046 [details].
Radar WebKit Bug Importer
Comment 5 2024-08-02 08:50:14 PDT
Note You need to log in before you can comment on or make changes to this bug.