[text-box-trim] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-half-leading-block-box-002.html https://bugs.webkit.org/show_bug.cgi?id=277504

Reviewed by Antti Koivisto.

The start side of the block is the logical bottom of the line when (visually) line bottom occurs
before line top in block direction (e.g in vertical-lr).

* LayoutTests/TestExpectations:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::textBoxTrim):

Canonical link: https://commits.webkit.org/281755@main